@@ -91,7 +91,7 @@ Some devices (like the above example) supports multiple delivery systems.
 Older DVB applications might not be able to switch from one delivery system
 to another one, as this feature were added only on DVB API version 5.5.
 .PP
-This feature allows to use those legacy applications.
+This feature allows one to use those legacy applications.
 .PP
 .nf
 $ \fBdvb\-fe\-tool \-d dvbc/annex_c\fR
