@@ -1,4 +1,4 @@
-.TH "IR\-KEYTABLE" "1" "Fri Oct 3 2014" "v4l-utils 1.5.91" "User Commands"
+.TH "IR\-KEYTABLE" "1" "Fri Oct 3 2014" "v4l-utils 1.6.0" "User Commands"
 .SH NAME
 ir\-keytable \- a swiss\-knife tool to handle Remote Controllers.
 .SH SYNOPSIS
